--- a/style.css
+++ b/style.css
@@ -4,13 +4,13 @@
     color: white; /* Cor do texto */
 }
 .banner-1{
-    background-image: url(./imgs/sorriso.jpg);
+    background-image: url(./imgs/sorriso1.jpg);
     margin-top: 0; /* Remove qualquer margem superior do banner */
     padding-top: 0;
 }
 .banners{
     width: 100%;
-    height: 100vh;
+    height: 80vh;
     background-repeat: no-repeat;
     background-size: cover;
     margin-top: 0%;
