--- a/cadrastro.css
+++ b/cadrastro.css
@@ -6,7 +6,7 @@ body {
   }
   
   header {
-    background-color: #c19284;
+    background-color: #D8AF9D;
     padding: 10px;
     display: flex;
     justify-content: space-between;
@@ -21,7 +21,7 @@ body {
   
   nav button {
     margin: 0 10px;
-    background-color: #8c5a4d;
+    background-color: #A7776B;
     color: white;
     border: none;
     padding: 8px 16px;
@@ -37,7 +37,7 @@ body {
   form {
     max-width: 800px;
     margin: auto;
-    background-color: #a96f61;
+    background-color: #D8AF9D;
     padding: 20px;
     border-radius: 10px;
     color: white;
@@ -69,7 +69,7 @@ body {
     padding: 8px;
     border: none;
     border-radius: 10px;
-    background-color: #e4b6a8;
+    background-color: #A7776B;
     margin-bottom: 10px;
   }
   
@@ -116,4 +116,7 @@ body {
     width: 100%;
     margin: 5px 0;
   }
+
+  
+ 
   
